--- a/Trainning1.ipynb
+++ b/Trainning1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPze66aC8vwh683vmo+0EBc",
+      "authorship_tag": "ABX9TyOtJyW8RgBOJTiVOI1MCVKh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -402,7 +402,7 @@
         "id": "NIQBZEDdNept",
         "outputId": "b40d062d-4841-4f37-873c-fe9097a6b227"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +437,7 @@
         "id": "T0ODHsT1qNm3",
         "outputId": "b5bfe7ce-8c26-4ab7-cfcf-b0f262c6f57c"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +465,7 @@
         "id": "3IVnkbwzqfbd",
         "outputId": "17d21934-100a-423f-eb0b-2f3be92893b8"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +489,7 @@
         "id": "21A5YEErq9zd",
         "outputId": "32b86344-f440-4a31-ba21-faf14e83b68d"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,24 +521,25 @@
     {
       "cell_type": "code",
       "source": [
-        "i = 1\n",
+        "i=0\n",
         "while i<10:\n",
         "    print(\"Happy\")\n",
         "    i=i+1"
       ],
       "metadata": {
+        "id": "cXBLAVp-0P98",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "cXBLAVp-0P98",
-        "outputId": "e8e885cc-4360-47d0-d664-94b1c839c493"
+        "outputId": "8809da7f-62a4-432f-bcd3-06da5b1f7a49"
       },
-      "execution_count": 66,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Happy\n",
             "Happy\n",
             "Happy\n",
             "Happy\n",
@@ -555,31 +556,101 @@
     {
       "cell_type": "code",
       "source": [
-        "i=1\n",
-        "while i>10:\n",
+        "i=0\n",
+        "while i<10:\n",
+        "  print(\"*\" *i) \n",
         "  if i<=5:\n",
         "    i=i+2\n",
         "  else:\n",
         "    i=i+1\n",
-        "print(i*\"YMCA\")"
+        "print(i*\"YMCA \")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SHYR8i9L0g4-",
-        "outputId": "677157d0-2b4c-4d9b-87e6-085294d94567"
+        "outputId": "d4405025-75b2-41a3-be56-c96b5e009120"
       },
-      "execution_count": 71,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "YMCA\n"
+            "\n",
+            "**\n",
+            "****\n",
+            "******\n",
+            "*******\n",
+            "********\n",
+            "*********\n",
+            "YMCA YMCA YMCA YMCA YMCA YMCA YMCA YMCA YMCA YMCA \n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Assignment7-8"
+      ],
+      "metadata": {
+        "id": "25mNDz_eEXvZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Assignment7\")\n",
+        "a=[\"เขียน\",\"โค้ด\",\"Python\",\"ง่ายนิดเดียว\"]\n",
+        "print(\"1.\",a[0]+a[1]+\" \"+a[2]+\" \"+a[3])\n",
+        "\n",
+        "\n",
+        "b = [1,2,3,4,5]\n",
+        "sum =0\n",
+        "for v in b:\n",
+        "  sum = sum + v\n",
+        "print(\"2. sum =\", sum)\n",
+        "\n",
+        "print(\"Assignment8\")\n",
+        "\n",
+        "c=[1,4,2,3,4]\n",
+        "for i in c:\n",
+        "  if i<=2:\n",
+        "    print(\"i =\", i, c[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ksfLHHJsEXlP",
+        "outputId": "9ab0e45f-6cfe-4df6-a383-99ab06d4b662"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Assignment7\n",
+            "1. เขียนโค้ด Python ง่ายนิดเดียว\n",
+            "2. sum = 15\n",
+            "Assignment8\n",
+            "i = 1 4\n",
+            "i = 2 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "N1Tq8tyoFz2T"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
